--- a/ROS学习笔记/常用快捷键.md
+++ b/ROS学习笔记/常用快捷键.md
@@ -1,8 +1,20 @@
 打开终端:
 `Ctrl+Alt+T`
 
+打开新的终端窗口:
+`Shift+Ctrl+N`
+
+终止当前任务:
+CTRL + C: 
+
+关闭终端:
+`Ctrl+d`
+
 粘贴:
 `CTRL + SHIFT + V: `
+
+自动补全命令或文件名:
+`TAB`
 
 移动到行首:
 `CTRL + A:`
@@ -19,5 +31,3 @@
 清屏,相当于clear:
 `Ctrl+l `
 
-关闭终端:
-`Ctrl+d`
