--- a/ROS学习笔记/实验一：ROS安装与测试/测试情况.md
+++ b/ROS学习笔记/实验一：ROS安装与测试/测试情况.md
@@ -9,3 +9,20 @@
 测试结果：
 
 ![turtle](./images/turtles.png)
+
+##  启动Rviz
+
+输入： `rviz`
+
+结果：
+
+![rviz](./images/rviz.png)
+
+
+## 启动Gazebo
+
+输入： `gazebo`
+
+结果：
+
+![gazebo](./images/gazebo.png)
