--- a/ROS学习笔记/实验三：ROS文件系统介绍/文件系统工具.md
+++ b/ROS学习笔记/实验三：ROS文件系统介绍/文件系统工具.md
@@ -1,1 +1,71 @@
+## ROS文件系统介绍
+
+### 文件系统概念
+**Packages: ** 
+软件包，是ROS应用程序代码的组织单元，每个软件包都可以包含程序库、可执行文件、脚本或者其它手动创建的东西。 Manifest (package.xml): 清单，是对软件包相关信息的描述,用于定义软件包相关元信息之间的依赖关系，这些信息包括版本、维护者和许可协议等。
+
+### 文件系统工具
+程序代码是分布在众多ROS软件包当中，当使用命令行工具（比如ls和cd）来浏览时会非常繁琐，因此ROS提供了专门的命令工具来简化这些操作。
+
+#### 1）使用 rospack
+
+rospack允许你获取软件包的有关信息。在本教程中，我们只涉及到rospack中find参数选项，该选项可以返回软件包的路径信息。
+
+用法：
+`rospack find [包名称]`
+
+示例：
+`rospack find roscpp`
+
+
+#### 2）使用 roscd
+用法：
+`roscd [本地包名称[/子目录]]`
+
+示例：
+`roscd roscpp`
+
 ![图片](https://user-images.githubusercontent.com/87596371/163659979-ceb34628-6f48-4a38-9d71-758f92023fd1.png)
+
+为了验证我们已经切换到了roscpp软件包目录下，现在我们可以使用Unix命令pwd来输出当前工作目录：
+`pwd`
+
+预期结果：
+`YOUR_INSTALL_PATH/share/roscpp`
+
+注意，就像ROS中的其它工具一样，roscd只能切换到那些路径已经包含在ROS_PACKAGE_PATH环境变量中的软件包，要查看ROS_PACKAGE_PATH中包含的路径可以输入：
+
+` echo $ROS_PACKAGE_PATH`
+
+
+你的ROS_PACKAGE_PATH环境变量应该包含那些保存有ROS软件包的路径，并且每个路径之间用冒号分隔开来。一个典型的ROS_PACKAGE_PATH环境变量如下：
+
+/opt/ros/indigo/base/install/share:/opt/ros/indigo/base/install/stacks 跟其他路径环境变量类似，你可以在ROS_PACKAGE_PATH中添加更多其它路径，每条路径使用冒号':'分隔。
+
+子目录:使用roscd也可以切换到一个软件包或软件包集的子目录中。
+
+执行：  
+`roscd roscpp/cmake`   
+` pwd`  
+
+使用roscd log可以切换到ROS保存日记文件的目录下。需要注意的是，如果你没有执行过任何ROS程序，系统会报错说该目录不存在。
+
+如果你已经运行过ROS程序，那么可以尝试： 
+`roscd log`
+
+#### 3）使用 rosls
+
+用法：
+`rosls [本地包名称[/子目录]]`  
+
+示例：
+`rosls roscpp_tutorials`
+
+![图片](https://user-images.githubusercontent.com/87596371/163660190-2625fd9e-456b-4c60-9a8b-f728682ac124.png)
+
+
+#### 4）Tab 自动完成命令行输入
+
+
+
+
