--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -1,1 +1,31 @@
+## 工作空间
 
+![图片](https://user-images.githubusercontent.com/87596371/164629164-8981f702-b760-46ab-a314-ef2e858bc75b.png)
+
+### 创建工作空间
+
+1. 创建工作空间:     `mkdir catkin_ws` (创建一个文件夹)  `cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个)  `catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)
+2. 编译工作空间:     (在catkin_ws根目录下) `catkin_make` 编译器指令
+![图片](https://user-images.githubusercontent.com/87596371/164644632-8e560c59-aedc-4469-935d-7ee0e59ee672.png)
+要生成install文件夹的话要用 `catkin_make install` 指令
+![Uploading 图片.png…]()
+
+- src： 放功能包的源码
+- install：安装空间，放最终编译生成的可执行文件
+- devel：开发空间，开发过程中的可执行文件和库
+- build：编译过程中的一些中间文件
+
+3. 设置环境变量:
+4. 检查环境变量:
+
+
+### 创建catkin程序包
+现在使用catkin_create_pkg命令来创建一个名为'beginner_tutorials'的新程序包，这个程序包依赖于std_msgs、roscpp和rospy：
+`catkin_create_pkg beginner_tutorials std_msgs rospy roscpp`
+这将会创建一个名为beginner_tutorials的文件夹，这个文件夹里面包含一个package.xml文件和一个CMakeLists.txt文件，这两个文件都已经自动包含了部分你在执行catkin_create_pkg命令时提供的信息。
+
+![图片](https://user-images.githubusercontent.com/87596371/164643165-f136de93-8182-405f-a0ed-be43f01bd6bd.png)
+
+catkin_create_pkg命令会要求你输入package_name，如果有需要你还可以在后面添加一些需要依赖的其它程序包：
+示例:
+*catkin_create_pkg <package_name> [depend1] [depend2] [depend3]
