--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -5,9 +5,15 @@
 
 ### 创建工作空间
 
-1. 创建工作空间:     `mkdir catkin_ws` (创建一个文件夹)  `cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个)  `catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)
-2. 编译工作空间:     (在catkin_ws根目录下) `catkin_make` 编译器指令
+1. 创建工作空间:     
+`mkdir catkin_ws` (创建一个文件夹) 
+`cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个) 
+`catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)
+
+2. 编译工作空间:     (在catkin_ws根目录下) 
+`catkin_make` （编译器指令）
 ![图片](https://user-images.githubusercontent.com/87596371/164644632-8e560c59-aedc-4469-935d-7ee0e59ee672.png)
+
 要生成install文件夹的话要用 `catkin_make install` 指令
 ![图片](https://user-images.githubusercontent.com/87596371/164646284-6c088d5c-6c68-4d4a-b0c0-c3cd3c9513b2.png)
 
@@ -21,17 +27,30 @@
 4. 检查环境变量:
 
 
-### 创建catkin程序包
+### 创建catkin功能包（程序包）
+
+创建代码的时候要先创造功能包，**功能包是放置源码的最小单元**，源码必须放在功能包里，而不能放在src文件夹下面
+
+创建功能包示例:
+
+`catkin_create_pkg <package_name> [depend1] [depend2] [depend3]`
+
+依赖是程序包里运用的库（相当于c语言里的#include）
+
 现在使用catkin_create_pkg命令来创建一个名为'beginner_tutorials'的新程序包，这个程序包依赖于std_msgs、roscpp和rospy：
 
 `catkin_create_pkg beginner_tutorials std_msgs rospy roscpp`
+
+依赖说明：
+- std_msgs  ROS定义的标准消息结构
+- rospy  python库
+- roscpp  C++库
 
 这将会创建一个名为beginner_tutorials的文件夹，这个文件夹里面包含一个package.xml文件和一个CMakeLists.txt文件，这两个文件都已经自动包含了部分你在执行catkin_create_pkg命令时提供的信息。
 
 ![图片](https://user-images.githubusercontent.com/87596371/164643165-f136de93-8182-405f-a0ed-be43f01bd6bd.png)
 
-catkin_create_pkg命令会要求你输入package_name，如果有需要你还可以在后面添加一些需要依赖的其它程序包：
+catkin_create_pkg命令会要求你输入package_name，如果有需要你还可以在后面添加一些需要依赖的其它程序包
 
-示例:
-
-`catkin_create_pkg <package_name> [depend1] [depend2] [depend3]`
+### 编译功能包
+（在catkin_ws下）`catkin_make`
