--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -5,12 +5,13 @@
 
 ### 创建工作空间
 
-1. 创建工作空间:     
+**1. 创建工作空间:    ** 
 `mkdir catkin_ws` (创建一个文件夹) 
 `cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个) 
 `catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)
 
-2. 编译工作空间:     (在catkin_ws根目录下) 
+**2. 编译工作空间:  **   (在catkin_ws根目录下) 
+
 `catkin_make` （编译器指令）
 ![图片](https://user-images.githubusercontent.com/87596371/164644632-8e560c59-aedc-4469-935d-7ee0e59ee672.png)
 
@@ -18,13 +19,14 @@
 ![图片](https://user-images.githubusercontent.com/87596371/164646284-6c088d5c-6c68-4d4a-b0c0-c3cd3c9513b2.png)
 
 
-- src： 放功能包的源码
-- install：安装空间，放最终编译生成的可执行文件
-- devel：开发空间，开发过程中的可执行文件和库
-- build：编译过程中的一些中间文件
+- **src：** 放功能包的源码
+- **install：** 安装空间，放最终编译生成的可执行文件
+- **devel：** 开发空间，开发过程中的可执行文件和库
+- **build：** 编译过程中的一些中间文件
 
-3. 设置环境变量:
-4. 检查环境变量:
+**3. 设置环境变量:**
+
+**4. 检查环境变量:**
 
 
 ### 创建catkin功能包（程序包）
@@ -41,7 +43,7 @@
 
 `catkin_create_pkg beginner_tutorials std_msgs rospy roscpp`
 
-依赖说明：
+**依赖说明：**
 - std_msgs  ROS定义的标准消息结构
 - rospy  python库
 - roscpp  C++库
@@ -49,6 +51,14 @@
 这将会创建一个名为beginner_tutorials的文件夹，这个文件夹里面包含一个package.xml文件和一个CMakeLists.txt文件，这两个文件都已经自动包含了部分你在执行catkin_create_pkg命令时提供的信息。
 
 ![图片](https://user-images.githubusercontent.com/87596371/164643165-f136de93-8182-405f-a0ed-be43f01bd6bd.png)
+
+功能包中关键文件说明：
+- package.xml: 关于功能包的信息（功能/版本/版权/依赖等）
+
+![图片](https://user-images.githubusercontent.com/87596371/164651582-6833e9ac-fbd2-4f84-830d-134a7dc3091a.png)
+
+- CMakelist.txt: 描述功能包的编译规则/设置等  
+![图片](https://user-images.githubusercontent.com/87596371/164651708-e14e39aa-219d-4674-82ab-0a170556e6a2.png)
 
 catkin_create_pkg命令会要求你输入package_name，如果有需要你还可以在后面添加一些需要依赖的其它程序包
 
