--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -55,7 +55,36 @@
 功能包中关键文件说明：
 - package.xml: 关于功能包的信息（功能/版本/版权/依赖等）
 
-![图片](https://user-images.githubusercontent.com/87596371/164651582-6833e9ac-fbd2-4f84-830d-134a7dc3091a.png)
+(''')
+<?xml version="1.0"?>
+<package format="2">
+  <name>beginner_tutorials</name>
+  <version>0.0.0</version>
+  <description>The beginner_tutorials package</description>
+
+  <maintainer email="richy@todo.todo">richy</maintainer>
+
+  <license>TODO</license>
+
+
+ 
+  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <export>
+
+
+  </export>
+</package>
+(''')
 
 - CMakelist.txt: 描述功能包的编译规则/设置等  
 ![图片](https://user-images.githubusercontent.com/87596371/164651708-e14e39aa-219d-4674-82ab-0a170556e6a2.png)
