--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -25,15 +25,17 @@
 - **build：** 编译过程中的一些中间文件
 
 **3. 设置环境变量:**
+`source devel/setup.bash`
 
 **4. 检查环境变量:**
-
+`echo $ROS_PACKAGE_PATH`
+![图片](https://user-images.githubusercontent.com/87596371/164677278-783dbcb3-baa7-4a6d-b16f-db7955bf0643.png)
 
 ### 创建catkin功能包（程序包）
 
 创建代码的时候要先创造功能包，**功能包是放置源码的最小单元**，源码必须放在功能包里，而不能放在src文件夹下面
 
-创建功能包示例:
+**创建功能包示例:**
 
 `catkin_create_pkg <package_name> [depend1] [depend2] [depend3]`
 
@@ -94,3 +96,6 @@ catkin_create_pkg命令会要求你输入package_name，如果有需要你还可
 
 ### 编译功能包
 （在catkin_ws下）`catkin_make`
+
+![图片](https://user-images.githubusercontent.com/87596371/164675807-eac63e74-9b30-4ffd-afa1-e6a5227055a2.png)
+
