--- a/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
+++ b/ROS学习笔记/实验四: 创建工作空间与功能包/创建工作空间与功能包笔记.md
@@ -5,12 +5,13 @@
 
 ### 创建工作空间
 
-**1. 创建工作空间:    ** 
-`mkdir catkin_ws` (创建一个文件夹) 
-`cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个) 
-`catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)
+**1. 创建工作空间:** 
 
-**2. 编译工作空间:  **   (在catkin_ws根目录下) 
+`mkdir catkin_ws` (创建一个文件夹)   
+`cd ~/catkin_ws/src`(没有的src文件夹的话要先新建一个)   
+`catkin_init_workspace`(初始化工作空间，相当于改变文件夹属性)  
+
+**2. 编译工作空间:**   (在catkin_ws根目录下) 
 
 `catkin_make` （编译器指令）
 ![图片](https://user-images.githubusercontent.com/87596371/164644632-8e560c59-aedc-4469-935d-7ee0e59ee672.png)
@@ -25,10 +26,17 @@
 - **build：** 编译过程中的一些中间文件
 
 **3. 设置环境变量:**
+
+在工作空间 catkin_ws下输入指令
 `source devel/setup.bash`
+设置环境变量以后，系统才能找到工作空间，和工作空间里对应的功能包
 
 **4. 检查环境变量:**
+
 `echo $ROS_PACKAGE_PATH`
+
+其中ROS_PACKAGE_PATH是ROS本身的环境变量，会通过这个环境变量查找所有功能包的路径
+
 ![图片](https://user-images.githubusercontent.com/87596371/164677278-783dbcb3-baa7-4a6d-b16f-db7955bf0643.png)
 
 ### 创建catkin功能包（程序包）
